testsuite/tests/properties/invalid_generics/analysis_unit_node.lkt
import common

class ExampleSeq: FooNode {
    @parse_field items: ASTList[FooNode, Example]

    @export fun p(@ignored u: AnalysisUnit[Int]): Bool = true
}
